--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300;400;469;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Leckerli+One&family=Yanone+Kaffeesatz:wght@200;300;400;469;500;600;700&display=swap" rel="stylesheet">
     <title>Il Sapore de la Pizza</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="padding: 0 !important;"></div>
   </body>
 </html>
